raft: add enums to info response
